--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1451,6 +1451,21 @@ the book. This description is an ordinary system
 description via its internal structure.
 \end{definition}
 
+\mynameref{def:categorical_approach} often uses so called
+\textit{Universal property} to define different constructions. 
+There is an informal definition of the property below
+\begin{definition}[Universal property]
+\label{def:universalproperty}
+In category theory we can highlight constructions when they follow an
+unique pattern. There are can be a lot of such constructions. We pick
+up the best one via a criteria that can be variate for different
+definitions. The criteria that is used to separate one categorical
+constructions from a huge amount of similar ones is called
+\textit{Universal property}.
+\end{definition}
+
+There are several examples of \mynameref{def:universalproperty} and
+\mynameref{def:categorical_approach} below.
 
 \subsection{Programming languages}
 
@@ -1632,6 +1647,15 @@ during the book in a lot of places.
 \end{remark}
 
 \subsubsection{Optics}
+
+Optics is another good example of \mynameref{def:universalproperty} in
+physics. In optics it can be reformulated as follows
+\begin{remark}[Universal property (optics)]
+\label{rem:universalpropertyoptics}
+A light beam chooses a path that requires the minimal amount of time to
+path through it.
+\end{remark}
+
 
 TBD Optics law
 
