--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1656,6 +1656,12 @@ A light beam chooses a path that requires the minimal amount of time to
 path through it.
 \end{remark}
 
+\begin{figure}
+  \centering
+  \input ./opticsrefraction.tex
+  \caption{Optics refraction as an example of Universal property in optics}
+  \label{fig:opticsrefraction}
+\end{figure}
 
 TBD Optics law
 
