Universal property: optics refraction

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1663,7 +1663,19 @@ path through it.
   \label{fig:opticsrefraction}
 \end{figure}
 
-TBD Optics law
+Good example of the property is shown in \cref{fig:opticsrefraction}.
+When the light traverse from point $A$ to point $B$ it does not use
+the shortest path because a big part of the path will be in water
+where speed of the light ($v_2$) is smaller than in air ($v_1$):
+\[
+v_2 < v_1
+\]
+Thus if it follows
+the \mynameref{def:universalproperty} then it should minimize the path
+in water that leads to well known Snell's law \cite{wiki:snellslaw}:
+\[
+\frac{\sin \theta_2}{\sin \theta_1} = \frac{v_2}{v_1} = \frac{n_1}{n_2}.
+\]
 
 \subsection{Quantum mechanics}
 
