--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,12 @@
 %% -*- coding:utf-8 -*-
+@misc{ wiki:snellslaw,
+    author = "{Wikipedia contributors}",
+    title = "Snell's law --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2019",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Snell%27s_law&oldid=908247962}",
+    note = "[Online; accessed 20-August-2019]"
+  }
+
 @misc{ wiki:least_action_principle,
     author = "{Wikipedia contributors}",
     title = "Principle of least action --- {Wikipedia}{,} The Free Encyclopedia",
