--- a/opticsrefraction.tex
+++ b/opticsrefraction.tex
@@ -26,4 +26,6 @@
     \draw (0,-1.4) arc (270:290:1.4) ;
     \node[] at (280:1.8)  {$\theta_{2}$};
     \node[] at (110:1.4)  {$\theta_{1}$};
+    \node[] at (135:5.0)  {$A$};
+    \node[] at (295:4.2)  {$B$};
 \end{tikzpicture}
