Universal property: optics refraction

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1458,7 +1458,7 @@ There is an informal definition of the property below
 \label{def:universalproperty}
 In category theory we can highlight constructions when they follow an
 unique pattern. There are can be a lot of such constructions. We pick
-up the best one via a criteria that can be variate for different
+up the best one via a criteria that can vary for different
 definitions. The criteria that is used to separate one categorical
 constructions from a huge amount of similar ones is called
 \textit{Universal property}.
@@ -1638,7 +1638,7 @@ equation can be used using global approach (via integral over all
 possible trajectories). or in other words the ``telescope'' was used
 there. 
 
-\begin{remark}[Universal property]
+\begin{remark}[Universal property][Mechanics]
 \label{rem:universalproperty}
 The principle of least action can be treated as an universal property
 that will allow to pick up one object (trajectory there) among the set
@@ -1650,7 +1650,7 @@ during the book in a lot of places.
 
 Optics is another good example of \mynameref{def:universalproperty} in
 physics. In optics it can be reformulated as follows
-\begin{remark}[Universal property (optics)]
+\begin{remark}[Universal property][Optics]
 \label{rem:universalpropertyoptics}
 A light beam chooses a path that requires the minimal amount of time to
 path through it.
