Universal property: optics refraction

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1457,15 +1457,17 @@ There is an informal definition of the property below
 \begin{definition}[Universal property]
 \label{def:universalproperty}
 In category theory we can highlight constructions when they follow an
-unique pattern. There are can be a lot of such constructions. We pick
+unique pattern. There can be a lot of such constructions. We pick
 up the best one via a criteria that can vary for different
-definitions. The criteria that is used to separate one categorical
-constructions from a huge amount of similar ones is called
+definitions. The criteria that is used to separate a particular
+categorical construction from a huge amount of similar ones is called
 \textit{Universal property}.
 \end{definition}
-
-There are several examples of \mynameref{def:universalproperty} and
-\mynameref{def:categorical_approach} below.
+The typical examples of the universal property application are
+\mynameref{def:product} and \mynameref{def:sum} definitions (see
+\cref{sec:product_and_sum}). There are several additional examples of
+\mynameref{def:universalproperty} and
+\mynameref{def:categorical_approach} below. 
 
 \subsection{Programming languages}
 
@@ -1639,7 +1641,7 @@ possible trajectories). or in other words the ``telescope'' was used
 there. 
 
 \begin{remark}[Universal property][Mechanics]
-\label{rem:universalproperty}
+\label{rem:universalpropertymechanics}
 The principle of least action can be treated as an universal property
 that will allow to pick up one object (trajectory there) among the set
 of the similar objects. The same universal properties will appear
