--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -207,7 +207,7 @@ In our toy example \cref{fig:pl_example} the type String is
 \end{example}
 
 \section{Product and sum}
-
+\label{sec:product_and_sum}
 \subsection{Product}
 The pair of 2 objects is defined via the \mynameref{def:universalproperty} in
 the following way:
