--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1463,10 +1463,12 @@ definitions. The criteria that is used to separate a particular
 categorical construction from a huge amount of similar ones is called
 \textit{Universal property}.
 \end{definition}
-The typical examples of the universal property application are
-\mynameref{def:product} and \mynameref{def:sum} definitions (see
-\cref{sec:product_and_sum}). There are several additional examples of
-\mynameref{def:universalproperty} and
+Typical examples of the universal property application are
+\mynameref{def:product} and \mynameref{def:sum} definitions. You can
+find the definitions later in the book (see
+\cref{sec:product_and_sum}). The \mynameref{def:universalproperty}
+seems to be broadly used in different areas. There are several examples of
+such \mynameref{def:universalproperty} usage and
 \mynameref{def:categorical_approach} below. 
 
 \subsection{Programming languages}
