--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,15 @@
 %% -*- coding:utf-8 -*-
+@book{feynman2010quantum,
+  title={Quantum Mechanics and Path Integrals},
+  author={Feynman, R.P. and Hibbs, A.R. and Styer, D.F.},
+  isbn={9780486477220},
+  lccn={2010004550},
+  series={Dover Books on Physics},
+  url={https://books.google.ru/books?id=JkMuDAAAQBAJ},
+  year={2010},
+  publisher={Dover Publications}
+}
+
 @misc{ wiki:snellslaw,
     author = "{Wikipedia contributors}",
     title = "Snell's law --- {Wikipedia}{,} The Free Encyclopedia",
