feynman path integrals

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1686,6 +1686,14 @@ during the book in a lot of places.
 \subsection{Quantum mechanics}
 
 Very interesting example of \mynameref{def:categorical_approach} is provided us by
-quantum mechanics via path integrals \cite{feynman2010quantum}. 
+quantum mechanics via path integrals \cite{feynman2010quantum}. The
+question that is asked is the following. If we have 2 points $a$ and
+$b$, what's probability $P(a, b)$ that a particle moves from $a$ to
+$b$? The probability is defined as follows \cite{feynman2010quantum}:
+\[
+P(a,b) = \left|K(a,b)\right|,
+\]
+where $K(a,b)$ is a special function defined by all possible paths
+from $a$ to $b$
 
 TBD Path integral
