monoid haskell example was added

--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -545,9 +545,8 @@ of \mynameref{def:distributive_category}
 
 From other hand not all categories which have both product and sum are
 distributive. One of such example is a category of all groups
-\cite{wiki:distributive_category} 
-$\cat{Grp}$ where groups are considered as objects and group
-homomorphisms as morphisms. 
+$\cat{Grp}$ \cite{wiki:distributive_category}  where groups are
+considered as objects and group homomorphisms as morphisms.  
 \end{example}
 
 \section{Exponential}
