exponentional: some additional explanations and changes in notations

--- a/notations.tex
+++ b/notations.tex
@@ -70,6 +70,8 @@
 \nomenclature{$eq\left(f, g\right)$}{\mynameref{def:equalizer}}
 \nomenclature{$\catcovhom{C}{a}$}{\mynameref{def:cov_hom_functor}}
 \nomenclature{$\catconhom{C}{a}$}{\mynameref{def:con_hom_functor}}
+\nomenclature{$\left|X\right|$}{size of \mynameref{def:set} $X$
+  (number of elements)}
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
