exponentional: some additional explanations and changes in notations

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -552,6 +552,12 @@ allow connect our usual knowledge about sets with the category theory.
   small letters: $a \in A$.
 \end{definition}
 
+\begin{definition}[Cardinality]
+\label{def:cardinality}
+The number of elements in the \mynameref{def:set} $A$ is called
+\textit{cardinality} and is denoted as $\left|A\right|$.
+\end{definition}
+
 \begin{definition}[Cartesian product]
   \label{def:cartesian_product}
   If $A$ and $B$ are two sets then we can define a new set $A \times B
