--- a/notations.tex
+++ b/notations.tex
@@ -70,6 +70,9 @@
 \nomenclature{$eq\left(f, g\right)$}{\mynameref{def:equalizer}}
 \nomenclature{$\catcovhom{C}{a}$}{\mynameref{def:cov_hom_functor}}
 \nomenclature{$\catconhom{C}{a}$}{\mynameref{def:con_hom_functor}}
+%% https://tex.stackexchange.com/questions/31562/nomencl-package-and-vertical-bar
+\nomenclature{$"|A"|$ }{\mynameref{def:cardinality} of a
+  \mynameref{def:set} $A$} 
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
