--- a/notations.tex
+++ b/notations.tex
@@ -73,6 +73,7 @@
 %% https://tex.stackexchange.com/questions/31562/nomencl-package-and-vertical-bar
 \nomenclature{$"|A"|$ }{\mynameref{def:cardinality} of a
   \mynameref{def:set} $A$} 
+\nomenclature{$curry(f)$ }{\mynameref{def:currying}} 
 \nomenclature{TBD}{To Be Defined (later)}
 
 \printnomenclature
