--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -556,10 +556,10 @@ We are going to talk about functions (aka morphisms) as
 \subsection{Definition and examples}
 \begin{example}[Homset]
 \label{ex:homset}
-Consider 2 sets $A$ and $B$ the set of functions between the 2 sets
-form a new set that is called as \mynameref{def:homset} and denoted as $A
-\to B$. Thus if $A,B \in \catob{Set}$ then the \mynameref{def:homset} will also $A
-\to B \in \catob{Set}$. 
+Consider 2 sets $A$ and $B$ then the set of functions between the 2 sets
+forms a new set that is called as \mynameref{def:homset} and denoted
+as $\catmset{A}{B}$. Thus if $A,B \in \catob{Set}$ then 
+$\catmset{A}{B} \in \catob{Set}$. 
 \end{example}
 
 The construction of \mynameref{def:homset} is applied to
@@ -567,11 +567,11 @@ the \mynameref{def:setcategory} but not to an arbitrary category because
 the \mynameref{def:homset} is a \mynameref{def:set} and therefore the
 object in the \mynameref{def:setcategory}. I.e. if $\cat{C}$ is a
 category and $a, b \in \catob{C}$ 
-then the \mynameref{def:homset} $a \to b \in \catob{Set}$ but we now want to
-construct something like to the \mynameref{def:homset} but that is an object in
-$\cat{C}$. This will be called as the function object. We will use the
-universal construction (\mynameref{def:universalproperty}) for the
-object definition. 
+then the \mynameref{def:homset} $\catmset{a}{b} \in \catob{Set}$ but
+we now want to construct something like to the \mynameref{def:homset}
+but that is an object in $\cat{C}$. This will be called as the
+function object. We will use the universal construction
+(\mynameref{def:universalproperty}) for the object definition. 
 
 \begin{definition}[Exponential]
 \label{def:exponential}
