--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -636,11 +636,12 @@ The notation is used for ``morphisms (functions) as objects'' in the
 category theory has an explanation provided in the following remark.
 \begin{remark}[Exponential notation]
 The \mynameref{def:homset} $\catmset{X}{Y}$ is often denoted as $Y^X$.
-Why the strange notation is used? Lets $X$ has only 2
+Why the strange notation is used? 
+Lets $X$ is a \mynameref{def:singleton_set} i.e. its
+\mynameref{def:cardinality} is $1$: $\left|X\right| = 1$. 
+The set $Y$ has only 2
 elements, i.e. its \mynameref{def:cardinality} is $2$: 
-$\left|X\right|= 2$. 
-The set $Y$ is a \mynameref{def:singleton_set} i.e. its
-\mynameref{def:cardinality} is $1$: $\left|Y\right| = 1$. 
+$\left|Y\right|= 2$. 
 
 Consider a function $f: X \to Y$. How many such functions do we have?
 There are really 2 functions. One of them return the first element
